--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "node-static": "0.7.4",
         "winston": "0.7.3",
         "xmldom": "0.1.16",
-        "semaphore": "1.0.1"
+        "semaphore": "1.0.1",
+        "bootstrap": "3.2.0"
     }
 }
