--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
         "winston": "0.7.3",
         "xmldom": "0.1.16",
         "semaphore": "1.0.1",
-        "bootstrap": "3.2.0"
+        "jquery": "latest"
     }
 }
