--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
         "start" : "node app"
     },
     "dependencies": {
-        "app-config": "0.1.4",
-        "async": "0.9.0",
-        "crypto": "0.0.3",
-        "express": "3.2.6",
-        "jade":    "0.35.0",
-        "mongodb": "1.4.9",
-        "node-uuid": "1.4.1",
-        "node-static": "0.7.4",
-        "winston": "0.7.3",
-        "xmldom": "0.1.16",
-        "semaphore": "1.0.1",
-        "jquery": "latest"
+        "app-config": "latest",
+        "async": "latest",
+        "crypto": "latest",
+        "express": "latest",
+        "jade":    "latest",
+        "mongodb": "latest",
+        "node-uuid": "latest",
+        "node-static": "latest",
+        "winston": "latest",
+        "xmldom": "latest",
+        "semaphore": "latest",
+        "jquery": "latest",
+	    "basic-auth": "latest",
+		"serve-favicon": "latest",
+		"json": "latest",
+		"body-parser": "latest"
     }
 }
