--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"express-session": "latest",
 	"bcrypt-nodejs": "latest",
 	"connect-flash": "latest",
-	"connect-ensure-login": "latest"
-    }
+	"connect-ensure-login": "latest",
+	"async": "latest"
+	}
 }
