ISSUE #28 - Internalize all libraries for demo

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ public/x3dom
 certs
 upgrade
 
+prototype/OST3
+prototype/OSTFed
+prototype/OST_Back_Roof
+prototype/OST_Roof
+prototype/OSTFed.txt
+
