ISSUE #28 - Cleaning up the directory structure and some code changes 	    for frontend integration

--- a/package.json
+++ b/package.json
@@ -19,19 +19,24 @@
         "semaphore": "latest",
         "jquery": "latest",
         "basic-auth": "latest",
-	"serve-favicon": "latest",
-	"json": "latest",
-	"body-parser": "latest",
-	"method-override" : "latest",
-	"compression" : "latest",
-	"passport": "latest",
-	"passport-local": "latest",
-	"mongoose": "latest",
-	"express-session": "latest",
-	"bcrypt-nodejs": "latest",
-	"connect-flash": "latest",
-	"connect-ensure-login": "latest",
-	"async": "latest",
-	"node.extend" : "latest"
+		"serve-favicon": "latest",
+		"json": "latest",
+		"body-parser": "latest",
+		"method-override" : "latest",
+		"compression" : "latest",
+		"passport": "latest",
+		"passport-local": "latest",
+		"mongoose": "latest",
+		"express-session": "latest",
+		"bcrypt-nodejs": "latest",
+		"connect-flash": "latest",
+		"connect-ensure-login": "latest",
+		"async": "latest",
+		"node.extend" : "latest",
+		"vhost": "latest",
+		"express-jwt" : "latest",
+		"jsonwebtoken" : "latest",
+		"passport-token" : "latest",
+		"cors" : "latest"
 	}
 }
