ISSUE #32 - Provide ability to load multiple types of site under 	    different subdomains in config

--- a/package.json
+++ b/package.json
@@ -41,10 +41,7 @@
 		"cookie-parser" : "latest",
 		"express-session" : "latest",
 		"cookie-session": "latest",
-<<<<<<< HEAD
-		"easyimage": "latest"
-=======
+		"easyimage": "latest",
 		"jsonschema": "latest"
->>>>>>> ISSUE_32
 	}
 }
