ISSUE #33 - Fix some issues with external JS files

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"express-session" : "latest",
 		"cookie-session": "latest",
 		"easyimage": "latest",
-		"jsonschema": "latest"
+		"jsonschema": "latest",
+		"jquery-ui": "latest"
 	}
 }
