--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "start" : "./forever_app default",
 		"stop" : "pkill node",
         "restart" : "npm stop && npm start",
-		"postinstall" : "node_modules/.bin/bower install",
+		"postinstall" : "./postinstall",
 		"upgrade" : "git checkout master && git pull && npm restart",
 		"test" : "node_modules/.bin/mocha -w"
 	},
