--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "restart" : "npm stop && npm start",
 		"postinstall" : "./postinstall",
 		"upgrade" : "git checkout master && git pull && npm restart",
-		"test" : "node_modules/.bin/mocha -w"
+		"test" : "node_modules/.bin/mocha"
 	},
     "dependencies": {
         "app-config": "latest",
