--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "scripts": {
         "start" : "./forever_app default",
-		"stop" : "pkill node",
-        "restart" : "npm stop && npm start",
+		"stop" : "forever stop 3drepo.js",
+        "restart" : "npm stop; npm start",
 		"postinstall" : "./postinstall",
 		"upgrade" : "git checkout master && git pull && npm restart",
 		"test" : "node_modules/.bin/mocha"
