ISSUE #55    - Fixed tree and meta data panels 	     - Re-wrote camera to avoid conflict with x3dom 	     - Almost fixed viewpoint calculation

--- a/package.json
+++ b/package.json
@@ -1,56 +1,55 @@
 {
-    "name": "3drepo.io",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "start" : "./forever_app default",
-		"stop" : "forever stop 3drepo.js",
-        "restart" : "npm stop; npm start",
-		"postinstall" : "./postinstall",
-		"upgrade" : "git checkout master && git pull && npm restart",
-		"test" : "node_modules/.bin/mocha"
-	},
-    "dependencies": {
-        "app-config": "latest",
-        "async": "latest",
-		"bower": "latest",
-		"mocha": "latest",
-		"should": ">= 0.0.1",
-        "crypto": "latest",
-        "express": "latest",
-        "jade":    "latest",
-        "mongodb": "latest",
-        "node-uuid": "latest",
-        "node-static": "latest",
-        "winston": "latest",
-        "xmldom": "latest",
-        "semaphore": "latest",
-        "jquery": "latest",
-        "basic-auth": "latest",
-		"serve-favicon": "latest",
-		"json": "latest",
-		"body-parser": "latest",
-		"method-override" : "latest",
-		"compression" : "latest",
-		"passport": "latest",
-		"passport-local": "latest",
-		"mongoose": "latest",
-		"express-session": "latest",
-		"bcrypt-nodejs": "latest",
-		"connect-flash": "latest",
-		"connect-ensure-login": "latest",
-		"async": "latest",
-		"node.extend" : "latest",
-		"vhost": "latest",
-		"express-jwt" : "latest",
-		"jsonwebtoken" : "latest",
-		"passport-token" : "latest",
-		"cors" : "latest",
-		"cookie-parser" : "latest",
-		"express-session" : "latest",
-		"cookie-session": "latest",
-		"easyimage": "latest",
-		"jsonschema": "latest",
-		"jquery-ui": "latest"
-	}
+  "name": "3drepo.io",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "./forever_app default",
+    "stop": "forever stop 3drepo.js",
+    "restart": "npm stop; npm start",
+    "postinstall": "./postinstall",
+    "upgrade": "git checkout master && git pull && npm restart",
+    "test": "node_modules/.bin/mocha"
+  },
+  "dependencies": {
+    "app-config": "latest",
+    "async": "latest",
+    "basic-auth": "latest",
+    "bcrypt-nodejs": "latest",
+    "body-parser": "latest",
+    "bower": "latest",
+    "compression": "latest",
+    "connect-ensure-login": "latest",
+    "connect-flash": "latest",
+    "cookie-parser": "latest",
+    "cookie-session": "latest",
+    "cors": "latest",
+    "crypto": "latest",
+    "easyimage": "latest",
+    "express": "latest",
+    "express-jwt": "latest",
+    "express-session": "latest",
+    "jade": "latest",
+    "jquery": "latest",
+    "jquery-ui": "latest",
+    "json": "latest",
+    "jsonschema": "latest",
+    "jsonwebtoken": "latest",
+    "mathjs": "^1.6.0",
+    "method-override": "latest",
+    "mocha": "latest",
+    "mongodb": "latest",
+    "mongoose": "latest",
+    "node-static": "latest",
+    "node-uuid": "latest",
+    "node.extend": "latest",
+    "passport": "latest",
+    "passport-local": "latest",
+    "passport-token": "latest",
+    "semaphore": "latest",
+    "serve-favicon": "latest",
+    "should": ">= 0.0.1",
+    "vhost": "latest",
+    "winston": "latest",
+    "xmldom": "latest"
+  }
 }
