--- a/bower.json
+++ b/bower.json
@@ -29,5 +29,8 @@
     "angular": "~1.3.15",
     "bootstrap-submenu": "~1.2.13",
     "qrcode": "~1.0.2"
+  },
+  "resolutions": {
+    "angular": "~1.3.15"
   }
 }
