--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "./forever_app default",
     "stop": "forever stop 3drepo.js",
     "restart": "npm stop; npm start",
-    "postinstall": "./postinstall",
+    "postinstall": "node ./postinstall.js",
     "upgrade": "git checkout master && git pull && npm restart",
     "test": "node_modules/.bin/mocha"
   },
