--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "masonry": "~3.3.0",
     "angular": "~1.3.15",
     "bootstrap-submenu": "~1.2.13",
-    "jsqrcode": "*"
+    "jsqrcode": "*",
+    "angular-bootstrap-datetimepicker": "~0.3.12"
   }
 }
