--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
     "bootstrap-submenu": "~1.2.13"
   },
   "resolutions": {
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
     "jsqrcode": "*",
     "angular-bootstrap-datetimepicker": "~0.3.12"
   }
