--- a/bower.json
+++ b/bower.json
@@ -27,11 +27,8 @@
     "fancytree": "~2.8.1",
     "masonry": "~3.3.0",
     "angular": "~1.3.15",
-    "bootstrap-submenu": "~1.2.13"
-  },
-  "resolutions": {
-    "angular": "~1.3.15",
-    "jsqrcode": "*",
+    "bootstrap-submenu": "~1.2.13",
+	"jsqrcode": "*",
     "angular-bootstrap-datetimepicker": "~0.3.12"
   }
 }
