ISSUE #55 - Fix for gamepad interface, and oculus rendering

--- a/plugins/project.json
+++ b/plugins/project.json
@@ -4,7 +4,8 @@
 		"js" : [
 			"project/viewermanager.js",
 			"project/viewer.js",
-			"project/gamepad.js"
+			"project/gamepad.js",
+			"project/collision.js"
 		],
 		"jade" : [
 			{"template" : "project/project.jade", "id" : "project.html"}
