--- a/bower.json
+++ b/bower.json
@@ -24,12 +24,15 @@
   "dependencies": {
     "angular-bootstrap-multiselect": "~0.3.0",
     "angular-bootstrap-select": "~0.0.5",
-	"angular-ui-router": "*",
+    "angular-ui-router": "*",
     "fancytree": "~2.8.1",
     "masonry": "~3.3.0",
     "angular": "~1.3.15",
     "bootstrap-submenu": "~1.2.13",
-	"jsqrcode": "*",
+    "jsqrcode": "*",
     "angular-bootstrap-datetimepicker": "~0.3.12"
+  },
+  "resolutions": {
+    "angular": "~1.3.15"
   }
 }
