--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular": "~1.3.15",
     "bootstrap-submenu": "~1.2.13",
     "jsqrcode": "*",
-    "angular-bootstrap-datetimepicker": "~0.3.12"
+    "angular-bootstrap-datetimepicker": "~0.3.12",
+    "moment": "~2.10.6"
   },
   "resolutions": {
     "angular": "~1.3.15"
