ISSUE #69 - Changed pin interface to 3D

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "latest",
     "connect-ensure-login": "latest",
     "connect-flash": "latest",
+    "cookie-parser": "latest",
     "cookie-session": "latest",
     "cors": "latest",
     "crypto": "latest",
@@ -27,7 +28,6 @@
     "express": "latest",
     "express-jwt": "latest",
     "express-session": "latest",
-    "express-socket.io-session": "^1.3.1",
     "jade": "latest",
     "jquery": "latest",
     "jquery-ui": "latest",
@@ -40,21 +40,17 @@
     "minify": "^1.4.19",
     "mocha": "latest",
     "mongodb": "latest",
-    "mongoose": "^4.1.5",
+    "mongoose": "latest",
     "node-static": "latest",
     "node-uuid": "latest",
     "node.extend": "latest",
     "passport": "latest",
     "passport-local": "latest",
     "passport-token": "latest",
-    "passport.socketio": "^3.5.1",
     "semaphore": "latest",
     "serve-favicon": "latest",
-    "session-file-store": "0.0.18",
     "should": ">= 0.0.1",
-    "socket.io": "^1.3.6",
-    "socket.io-client": "^1.3.6",
-    "socketio-wildcard": "^0.1.1",
+    "vhost": "latest",
     "winston": "latest",
     "xmldom": "latest"
   }
