--- a/bower.json
+++ b/bower.json
@@ -22,17 +22,16 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.15",
-    "angular-bootstrap-datetimepicker": "~0.3.12",
-    "angular-bootstrap-multiselect": "~0.3.0",
-    "angular-bootstrap-select": "~0.0.5",
+    "angular": "1.4.4",
     "angular-bootstrap-slider": "~0.1.18",
     "angular-ui-router": "*",
     "bootstrap-submenu": "~1.2.13",
     "fancytree": "~2.8.1",
+    "font-awesome": "~4.4.0",
     "jsqrcode": "*",
     "masonry": "~3.3.0",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "socket.io-client": "~1.3.6"
   },
   "resolutions": {
     "angular": "~1.3.15"
