--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node_modules/.bin/mocha"
   },
   "dependencies": {
+    "amqplib": "latest",
     "app-config": "latest",
     "async": "latest",
     "basic-auth": "latest",
