--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-jwt": "latest",
     "express-session": "latest",
     "express-socket.io-session": "^1.3.1",
+	"fs.extra": "latest",
     "jade": "latest",
     "jquery": "latest",
     "jquery-ui": "latest",
@@ -43,6 +44,7 @@
     "mocha": "latest",
     "mongodb": "latest",
     "mongoose": "^4.1.5",
+	"multer": "latest",
     "node-static": "latest",
     "node-uuid": "latest",
     "node.extend": "latest",
