MASTER - Removed some no longer necessary packages

--- a/package.json
+++ b/package.json
@@ -13,49 +13,24 @@
   "dependencies": {
     "app-config": "latest",
     "async": "latest",
-    "basic-auth": "latest",
-    "bcrypt-nodejs": "latest",
     "body-parser": "latest",
     "bower": "latest",
     "compression": "latest",
-    "connect-ensure-login": "latest",
-    "connect-flash": "latest",
-    "cookie-session": "latest",
-    "cors": "latest",
-    "crypto": "latest",
-    "easyimage": "latest",
     "express": "latest",
-    "express-jwt": "latest",
     "express-session": "latest",
     "express-socket.io-session": "^1.3.1",
     "jade": "latest",
-    "jquery": "latest",
-    "jquery-ui": "latest",
-    "jshint": "^2.8.0",
-    "json": "latest",
     "jsonschema": "latest",
-    "jsonwebtoken": "latest",
     "mathjs": "^1.6.0",
-    "method-override": "latest",
-    "minifier": "latest",
     "minify": "^1.4.19",
     "mocha": "latest",
     "mongodb": "latest",
-    "mongoose": "^4.1.5",
     "node-static": "latest",
-    "node-uuid": "latest",
-    "node.extend": "latest",
-    "passport": "latest",
-    "passport-local": "latest",
-    "passport-token": "latest",
-    "passport.socketio": "^3.5.1",
-    "semaphore": "latest",
-    "serve-favicon": "latest",
+    "node-uuid": "1.4.3",
     "session-file-store": "0.0.18",
-    "should": ">= 0.0.1",
     "socket.io": "^1.3.6",
-    "socket.io-client": "^1.3.6",
-    "socketio-wildcard": "^0.1.1",
+    "socket.io-client": "^1.3.7",
+    "underscore": "^1.8.3",
     "winston": "latest",
     "xmldom": "latest"
   },
