--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-static": "latest",
     "node-uuid": "1.4.3",
     "session-file-store": "0.0.18",
+    "shortid": "^2.2.2",
     "socket.io": "^1.3.6",
     "socket.io-client": "^1.3.7",
     "underscore": "^1.8.3",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.11.3",
-    "jshint": "^2.8.0"
+    "jshint": "^2.8.0",
+    "response-time": "^2.3.1"
   }
 }
