--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
     "express": "latest",
     "express-session": "latest",
     "express-socket.io-session": "^1.3.1",
-	"fs.extra": "latest",
+    "fs.extra": "latest",
     "jade": "latest",
     "jsonschema": "latest",
     "mathjs": "^1.6.0",
     "minify": "^1.4.19",
     "mocha": "latest",
     "mongodb": "latest",
-	"multer": "latest",
+    "multer": "latest",
     "node-static": "latest",
     "node-uuid": "1.4.3",
     "session-file-store": "0.0.18",
     "socket.io": "^1.3.6",
     "socket.io-client": "^1.3.7",
     "underscore": "^1.8.3",
+    "vhost": "^3.0.2",
     "winston": "latest",
     "xmldom": "latest"
   },
