--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,11 @@
     "jsqrcode": "*",
     "masonry": "~3.3.0",
     "moment": "~2.10.6",
-    "socket.io-client": "~1.3.6"
+    "socket.io-client": "~1.3.6",
+    "angular-ui-tree": "~2.10.0",
+    "angular-material": "~0.11.4",
+    "angular-animate": "~1.4.7",
+    "angular-aria": "~1.4.7"
   },
   "resolutions": {
     "angular": "~1.3.15"
