ISSUE #88 - Improved styling on Tree and Issues, saving issues works

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,38 @@ sessions
 build/config.gypi
 obj/Debug
 
+.idea/.name
+
+.idea/3drepo.io.iml
+
+.idea/codeStyleSettings.xml
+
+.idea/inspectionProfiles/profiles_settings.xml
+
+.idea/inspectionProfiles/Project_Default.xml
+
+.idea/jsLibraryMappings.xml
+
+.idea/jsLinters/jshint.xml
+
+.idea/jsLinters/jslint.xml
+
+.idea/libraries/3drepo_io_node_modules.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/vcs.xml
+
+.idea/watcherTasks.xml
+
+.idea/workspace.xml
+
+create_admin_user.js
+
+create_node_user.js
+
+.idea/encodings.xml
+
+.idea/mongoSettings.xml
