--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "angular-ui-tree": "~2.10.0",
     "angular-material": "~0.11.4",
     "angular-animate": "~1.4.7",
-    "angular-aria": "~1.4.7"
+    "angular-aria": "~1.4.7",
+    "angular-sanitize": "~1.4.8"
   },
   "resolutions": {
     "angular": "~1.3.15"
