ISSUE #124 - Assigning roles working, filtering roles working

--- a/plugins/project.json
+++ b/plugins/project.json
@@ -18,6 +18,7 @@
 			"project/ProjectData.js",
 			"project/ViewerService.js",
 			"project/projectDirective.js",
+            "project/projectService.js",
 			"project/viewerDirective.js",
 			"project/viewerManagerDirective.js"
 		],
