--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "restart": "npm stop; npm start",
     "postinstall": "node ./postinstall.js",
     "upgrade": "git checkout master && git pull && npm restart",
-    "test": "node_modules/.bin/mocha"
+    "test": "node_modules/.bin/mocha",
+    "dev": "nodemon 3drepo.js"
   },
   "dependencies": {
     "amqplib": "latest",
@@ -23,6 +24,7 @@
     "fs.extra": "latest",
     "jade": "latest",
     "jsonschema": "latest",
+    "lodash": "^3.10.1",
     "mathjs": "^1.6.0",
     "minify": "^1.4.19",
     "mocha": "latest",
