--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
-    - "0.10"
-
+    - "4.1"
+before_install: npm install -g grunt-cli
+install: npm install
 notifications:
     email: 
         recipients:
