--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
   "devDependencies": {
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.3",
-    "response-time": "^2.3.1",
     "grunt-contrib-uglify": "^0.9.2",
-    "jshint": "^2.8.0"
+    "jshint": "^2.8.0",
+    "mongoose-timestamp": "^0.5.0",
+    "response-time": "^2.3.1"
   }
 }
