--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "latest",
     "bower": "latest",
     "compression": "latest",
+    "deferred": "^0.7.4",
     "express": "latest",
     "express-session": "latest",
     "express-socket.io-session": "^1.3.1",
@@ -31,6 +32,7 @@
     "mongodb": "latest",
     "mongoose": "^4.3.5",
     "multer": "latest",
+    "multiparty": "^4.1.2",
     "node-static": "latest",
     "node-uuid": "1.4.3",
     "session-file-store": "0.0.18",
