--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-mocha-test": "^0.12.7",
+    "grunt-webfont": "^1.1.0",
     "jshint": "^2.8.0",
     "response-time": "^2.3.1"
   }
