--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "body-parser": "latest",
     "bower": "latest",
     "compression": "latest",
+    "earcut": "^2.0.8",
     "express": "latest",
     "express-session": "latest",
     "express-socket.io-session": "^1.3.1",
     "fs.extra": "latest",
+    "geodesy": "^1.0.2",
     "jade": "latest",
     "jsonschema": "latest",
     "lodash": "^3.10.1",
