--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "minify": "^1.4.19",
     "mocha": "latest",
     "mongodb": "latest",
+    "mongoose": "^4.4.6",
     "multer": "latest",
     "node-static": "latest",
     "node-uuid": "1.4.3",
