--- a/package.json
+++ b/package.json
@@ -43,12 +43,18 @@
     "xmldom": "latest"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-mocha-test": "^0.12.7",
     "grunt-webfont": "^1.1.0",
     "jshint": "^2.8.0",
-    "response-time": "^2.3.1"
+    "mockgoose": "^5.3.3",
+    "mongo-mock": "^2.0.0",
+    "mongoose-mock": "^0.4.0",
+    "proxyquire": "^1.7.4",
+    "response-time": "^2.3.1",
+    "sinon": "^1.17.3"
   }
 }
