--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mongoose-mock": "^0.4.0",
     "proxyquire": "^1.7.4",
     "response-time": "^2.3.1",
-    "sinon": "^1.17.3"
+    "sinon": "^1.17.3",
+    "supertest": "^1.2.0"
   }
 }
