--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.9.2",
+    "grunt-env": "^0.4.4",
     "grunt-mocha-test": "^0.12.7",
     "grunt-webfont": "^1.1.0",
     "jshint": "^2.8.0",
