--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^1.0.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-mocha-test": "^0.12.7",
