--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "grunt-webfont": "^1.1.0",
     "jshint": "^2.8.0",
     "mongoose-timestamp": "^0.5.0",
-    "response-time": "^2.3.1"
+    "response-time": "^2.3.1",
     "mockgoose": "^5.3.3",
     "mongo-mock": "^2.0.0",
     "mongoose-mock": "^0.4.0",
