--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ certs
 public/dist/plugins.concat.js
 public/dist/plugins.min.js
 
+public/dist/plugins.concat.js.map
+public/dist/plugins.min.js.map
+
 public/dist/three_d_repo.min.js
 public/dist/three_d_repo.min.js.map
 
