ISSUE #195  - Allowed multiple services on one server 	    - Allowed different backgrounds per service 	    - Allowed redirecting from one to another

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "mathjs": "^1.6.0",
     "minify": "^1.4.19",
     "mocha": "latest",
-    "mongodb": "latest",
-    "mongoose": "^4.4.6",
+    "mongodb": "2.1.7",
+    "mongoose": "4.4.6",
     "multer": "latest",
     "multiparty": "^4.1.2",
     "node-static": "latest",
