--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "body-parser": "latest",
     "bower": "latest",
     "compression": "latest",
-    "earcut": "^2.0.8",
+    "cors": "^2.7.1",
     "deferred": "^0.7.4",
+    "earcut": "^2.0.8",
     "express": "latest",
     "express-session": "latest",
     "express-socket.io-session": "^1.3.1",
