--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
-services: mongodb
-before_install: 
+before_install:
+    - echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.0.list
+    - sudo apt-get update
+    - sudo apt-get install -y mongodb-org
     - mongod --version
     - npm install -g grunt-cli
     - sleep 15
