--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,6 @@
     "geodesy": "https://github.com/chrisveness/geodesy.git#1.0.2"
   },
   "resolutions": {
-    "angular": "~1.3.15"
+    "angular": "1.5.5"
   }
 }
