--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "body-parser": "1.15.0",
     "bower": "1.7.7",
     "compression": "1.6.1",
-    "earcut": "2.1.1",
     "deferred": "0.7.5",
+    "earcut": "2.1.1",
     "express": "4.13.4",
     "express-session": "1.13.0",
     "express-socket.io-session": "1.3.1",
@@ -37,6 +37,7 @@
     "multiparty": "4.1.2",
     "node-static": "0.7.7",
     "node-uuid": "1.4.7",
+    "nodemailer": "^2.3.2",
     "session-file-store": "0.0.18",
     "shortid": "2.2.4",
     "socket.io": "1.4.5",
