#211 package data update + script to clone a release + setup the web server
windows only for now.

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,8 @@ public/css/fonts/three-d-repo.woff
 
 #Distribution files
 public/dist
+
+#installation temporary files
+tools/release/tmp
+tools/release/*.exe
+
