#211 more installer improvements
installMongo/Node is now on it's own wizard page

--- a/tools/release/installer/packages/org.3drepo.io/meta/package.xml
+++ b/tools/release/installer/packages/org.3drepo.io/meta/package.xml
@@ -17,5 +17,7 @@
     <Script>installscript.qs</Script>
     <UserInterfaces>
         <UserInterface>endingcheckboxform.ui</UserInterface>
+        <UserInterface>alterConfig.ui</UserInterface>
+        <UserInterface>hostRedirect.ui</UserInterface>
     </UserInterfaces>
 </Package>
