#211 add "you need to start your mongodb page"

--- a/tools/release/installer/packages/org.3drepo.io/meta/package.xml
+++ b/tools/release/installer/packages/org.3drepo.io/meta/package.xml
@@ -19,5 +19,6 @@
         <UserInterface>endingcheckboxform.ui</UserInterface>
         <UserInterface>alterConfig.ui</UserInterface>
         <UserInterface>hostRedirect.ui</UserInterface>
+        <UserInterface>runMongo.ui</UserInterface>
     </UserInterfaces>
 </Package>
