--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postinstall": "node ./postinstall.js",
     "upgrade": "git checkout master && git pull && npm restart",
     "test": "grunt test",
-    "dev": "nodemon 3drepo.js"
+    "dev": "nodemon 3drepo.js",
+    "create-ghost": "node scripts/createGhost"
   },
   "dependencies": {
     "amqplib": "0.4.1",
