--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "node ./postinstall.js",
     "upgrade": "git checkout master && git pull && npm restart",
     "test": "grunt test",
+    "test-int": "NODE_ENV=test npm run create-ghost && grunt test-integrated",
     "dev": "nodemon 3drepo.js",
     "create-ghost": "node scripts/createGhost"
   },
