#222 logout api test and fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
 install: npm install
 script:
     - npm test
-    - npm test-int
+    - npm run test-int
 notifications:
     email: 
         recipients:
