issue #222 update travis, add verification test

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
     - "4.1"
 env:
   - CXX=g++-4.8
+sudo: required
 addons:
   apt:
     sources:
@@ -19,6 +20,8 @@ before_install:
     - cd backend/test/integrated/
     - mongorestore
 install: npm install
+services:
+  - rabbitmq
 script:
     - npm test
     - npm run test-int
