--- a/bower.json
+++ b/bower.json
@@ -34,8 +34,7 @@
     "angular-sanitize": "~1.4.8",
     "material-design-icons": "^2.2.3",
     "angular-recaptcha": "^3.0.3",
-    "geodesy": "https://github.com/chrisveness/geodesy.git#1.0.2",
-    "jspdf": "^1.2.61"
+    "geodesy": "https://github.com/chrisveness/geodesy.git#1.0.2"
   },
   "resolutions": {
     "angular": "1.5.5"
