--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "bower": "1.7.7",
     "compression": "1.6.1",
     "cors": "2.7.1",
-    "earcut": "2.1.1",
     "deferred": "0.7.5",
+    "earcut": "2.1.1",
     "express": "4.13.4",
     "express-session": "1.13.0",
     "express-socket.io-session": "1.3.1",
@@ -34,6 +34,7 @@
     "lodash": "3.10.1",
     "mathjs": "1.7.1",
     "mocha": "2.4.5",
+    "moment": "^2.13.0",
     "mongodb": "2.1.7",
     "mongoose": "4.4.6",
     "mongoose-timestamp": "^0.5.0",
@@ -42,6 +43,7 @@
     "node-static": "0.7.7",
     "node-uuid": "1.4.7",
     "nodemailer": "^2.3.2",
+    "paypal-rest-sdk": "^1.6.9",
     "session-file-store": "0.0.18",
     "shortid": "2.2.4",
     "socket.io": "1.4.5",
