--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "grunt test",
     "test-int-clean-up": "chmod 755 ./backend/test/cleanup/prompt.sh && ./backend/test/cleanup/prompt.sh && mongo localhost/admin ./backend/test/cleanup/db.js && NODE_ENV=test node ./backend/test/cleanup/queue.js && mongorestore ./backend/test/integrated/dump",
     "test-int": "NODE_ENV=test npm run create-ghost && grunt test-integrated",
+    "test-all": "NODE_ENV=test npm run test-int-clean-up && npm run test && npm run test-int",
     "dev": "nodemon 3drepo.js",
     "create-ghost": "node scripts/createGhost"
   },
