--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mathjs": "1.7.1",
     "mocha": "2.4.5",
     "moment": "^2.13.0",
+    "moment-timezone": "^0.5.4",
     "mongodb": "2.1.7",
     "mongoose": "4.4.6",
     "mongoose-timestamp": "^0.5.0",
