--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "restart": "npm stop; npm start",
     "postinstall": "node ./postinstall.js",
     "upgrade": "git checkout master && git pull && npm restart",
-    "test": "grunt test",
+    "test": "NODE_ENV=test grunt test",
     "test-int-clean-up": "chmod 755 ./backend/test/cleanup/prompt.sh && ./backend/test/cleanup/prompt.sh && mongo localhost/admin ./backend/test/cleanup/db.js && NODE_ENV=test node ./backend/test/cleanup/queue.js && mongorestore ./backend/test/integrated/dump",
     "test-int": "NODE_ENV=test npm run create-ghost && grunt test-integrated",
     "test-all": "NODE_ENV=test npm run test && npm run test-int-clean-up && npm run test-int",
