--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "paypal-rest-sdk": "^1.6.9",
     "session-file-store": "0.0.18",
     "shortid": "2.2.4",
+    "soap": "0.16.0",
     "socket.io": "1.4.5",
     "socket.io-client": "1.3.7",
     "underscore": "1.8.3",
