--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nodemailer": "^2.3.2",
     "paypal-rest-sdk": "^1.6.9",
     "phantom": "^2.1.14",
+    "serve-favicon": "^2.3.0",
     "session-file-store": "0.0.18",
     "shortid": "2.2.4",
     "soap": "0.16.0",
