#253 change zip library url in package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "amqplib": "0.4.1",
     "app-config": "0.1.5",
-    "archiver": "^1.1.0",
+    "archiver": "1.1.0",
     "async": "1.5.2",
     "body-parser": "1.15.0",
     "bower": "1.7.7",
@@ -40,16 +40,16 @@
     "moment-timezone": "0.5.4",
     "mongodb": "2.1.7",
     "mongoose": "4.4.6",
-    "mongoose-timestamp": "^0.5.0",
+    "mongoose-timestamp": "0.5.0",
     "multer": "1.1.0",
     "multiparty": "4.1.2",
-    "node-gd": "^1.4.0",
+    "node-gd": "1.4.0",
     "node-static": "0.7.7",
     "node-uuid": "1.4.7",
-    "nodemailer": "^2.3.2",
-    "paypal-rest-sdk": "^1.6.9",
-    "phantom": "^2.1.14",
-    "serve-favicon": "^2.3.0",
+    "nodemailer": "2.3.2",
+    "paypal-rest-sdk": "1.6.9",
+    "phantom": "2.1.14",
+    "serve-favicon": "2.3.0",
     "session-file-store": "0.0.18",
     "shortid": "2.2.4",
     "soap": "0.16.0",
@@ -59,9 +59,9 @@
     "vhost": "3.0.2",
     "winston": "2.2.0",
     "xml2js": "0.4.17",
-    "xmlbuilder": "^8.2.2",
+    "xmlbuilder": "8.2.2",
     "xmldom": "0.1.22",
-    "yauzl": "^2.6.0"
+    "yauzl": "git://github.com/3drepo/yauzl.git"
   },
   "devDependencies": {
     "chai": "3.5.0",
