ISSUE #306 - Updates to packages to fix compatibility problems

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "mocha": "2.4.5",
     "moment": "2.13.0",
     "moment-timezone": "0.5.4",
-    "mongodb": "2.2.16",
-    "mongoose": "4.7.6",
+    "mongodb": "*",
+    "mongoose": "*",
     "mongoose-double": "0.0.1",
     "mongoose-timestamp": "0.5.0",
     "multer": "1.1.0",
